# audionotes-ai

./: .aignore  .env.example  .gitignore  CLAUDE.md  README.md  audionotes.db  en2zh.pyw  git_diff_process.txt  git_status.txt  metadata.json  package-lock.json  package.json  project_architecture.md  pyproject.toml  run.py  server.ts  test_output.txt
.agents/rules/: debugger.md
.claude/: settings.local.json
backend/: .env.example  config.py  main.py  requirements.txt
backend/models/: database.py  orm.py  schemas.py
backend/routers/: admin.py  audio.py  auth.py  bilibili.py  export.py  models.py  process.py  prompts.py
backend/services/: auth_service.py  bilibili_service.py  gemini_service.py  llm_service.py  sensevoice_service.py
frontend/: index.html
frontend/css/: styles.css
frontend/js/: api.js  app.js
src/: App.tsx  index.css
